syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.schmohl.searchbird";
option java_outer_classname = "SearchbirdProto";
option objc_class_prefix = "SB";

package searchbird;

service SearchBird {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Put (PutRequest) returns (PutResponse);
  rpc Search (SearchRequest) returns (SearchResponse);
}

/*
 * Requests
 */

message GetRequest {
  string key = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message SearchRequest {
  string query = 1;
}

/* 
 * Responses 
 */

message GetResponse {
  bool found = 1; // whether the key was found.
  string value = 2; // '' if key is not found.
}

message PutResponse {
  bool hasPrev = 1; // whether the key previously existed
  string prev = 2; // returns previous value if key existed, else ''.
}

message SearchResponse {
  repeated string key = 1; // [] if no results.
}
